[gd_scene load_steps=8 format=2]

[ext_resource path="res://Tubes/mx_frame.png" type="Texture" id=1]
[ext_resource path="res://Tubes/Tubes.gd" type="Script" id=2]
[ext_resource path="res://Tubes/tube-Sheet.png" type="Texture" id=3]
[ext_resource path="res://Tubes/mx_frame_overlay.png" type="Texture" id=4]
[ext_resource path="res://Fonts/soviet_font_12.tres" type="DynamicFont" id=5]
[ext_resource path="res://Sounds/sounds.tscn" type="PackedScene" id=6]
[ext_resource path="res://OutputBar/output_bar.tscn" type="PackedScene" id=7]

[node name="Tubes" type="Node2D"]
script = ExtResource( 2 )

[node name="mx_frame" type="Sprite" parent="."]
position = Vector2( 48, 60 )
texture = ExtResource( 1 )

[node name="maze_corner" type="Position2D" parent="mx_frame"]
position = Vector2( -36, -51 )
z_index = 1

[node name="tube" type="Sprite" parent="mx_frame/maze_corner"]
z_index = 1
texture = ExtResource( 3 )
centered = false
hframes = 10

[node name="tube_exit" type="Sprite" parent="mx_frame/maze_corner"]
position = Vector2( 66, 70 )
z_index = 1
texture = ExtResource( 3 )
centered = false
hframes = 10
frame = 1

[node name="electric_ball" type="Position2D" parent="mx_frame/maze_corner"]

[node name="ColorRect" type="ColorRect" parent="mx_frame/maze_corner/electric_ball"]
margin_right = 6.0
margin_bottom = 6.0
color = Color( 0.309804, 0.376471, 0.909804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spawn_timer" type="Timer" parent="."]

[node name="mx_frame_overlay" type="Sprite" parent="."]
z_index = 2
texture = ExtResource( 4 )
centered = false

[node name="message" type="Label" parent="mx_frame_overlay"]
margin_top = 101.0
margin_right = 97.0
margin_bottom = 216.0
custom_fonts/font = ExtResource( 5 )
text = "No Signal"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="mx_frame_overlay/message"]
show_behind_parent = true
margin_left = 8.0
margin_right = 88.0
margin_bottom = 13.0
color = Color( 0.980392, 0.0156863, 0.0156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="key1" type="Label" parent="mx_frame_overlay"]
margin_left = -32.0
margin_top = 72.0
margin_right = 65.0
margin_bottom = 187.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.984314, 0.615686, 0.156863, 1 )
text = "A"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="key2" type="Label" parent="mx_frame_overlay"]
margin_left = -21.0
margin_top = 72.0
margin_right = 76.0
margin_bottom = 187.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.984314, 0.615686, 0.156863, 1 )
text = "A"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="key3" type="Label" parent="mx_frame_overlay"]
margin_left = -10.0
margin_top = 72.0
margin_right = 87.0
margin_bottom = 187.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.984314, 0.615686, 0.156863, 1 )
text = "A"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="completion_1" type="ColorRect" parent="mx_frame_overlay"]
show_behind_parent = true
margin_left = 18.0
margin_top = 89.0
margin_right = 27.0
margin_bottom = 97.0
color = Color( 0.980392, 0.0156863, 0.0156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="completion_2" type="ColorRect" parent="mx_frame_overlay"]
show_behind_parent = true
margin_left = 29.0
margin_top = 89.0
margin_right = 38.0
margin_bottom = 97.0
color = Color( 0.980392, 0.0156863, 0.0156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="completion_3" type="ColorRect" parent="mx_frame_overlay"]
show_behind_parent = true
margin_left = 40.0
margin_top = 89.0
margin_right = 49.0
margin_bottom = 97.0
color = Color( 0.980392, 0.0156863, 0.0156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="output_bar" parent="." instance=ExtResource( 7 )]
position = Vector2( 3, 100 )
z_index = 2

[node name="electric_move_timer" type="Timer" parent="."]
autostart = true

[node name="sounds" parent="." instance=ExtResource( 6 )]
[connection signal="timeout" from="electric_move_timer" to="." method="_on_electric_move_timer_timeout"]
